PoC conditional navigation to menu or admin menu based on permissions